sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: not found: value j
      if (plusPetit(j+1,j)) {
                    ^AlgBubbleSort1:7: error: not found: value j
      if (plusPetit(j+1,j)) {
                        ^AlgBubbleSort1:8: error: not found: value j
        echange(j,j+1) 
                ^AlgBubbleSort1:8: error: not found: value j
        echange(j,j+1) 
                  ^